[package]
name = "portal-solutions-rage-compiler"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Expiremental Rust to JS compiler for frontend development"

[dependencies]
anyhow = "1.0.98"
itertools = "0.14.0"
once_map = "0.4.21"
portal-solutions-swibb.workspace = true
proc-macro2.workspace = true
quote.workspace = true
sha3 = "0.10.8"
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
syn.workspace = true
