[package]
name = "rage-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
itertools.workspace = true
once_map.workspace = true
sha3.workspace = true
async-trait.workspace = true

syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true

