[package]
name = "portal-solutions-rage-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.98"
itertools = "0.14.0"
once_map = "0.4.21"
portal-solutions-swibb.workspace = true

sha3 = "0.10.8"
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true