[package]
name = "portal-solutions-rage-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
itertools.workspace = true
once_map.workspace = true
sha3.workspace = true

rage-common.workspace = true

portal-solutions-swibb.workspace = true

swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_utils.workspace = true

syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
