[package]
name = "ragen"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true

ragen-core = {path = "../ragen-core",version = "0.1.0"}